# effective_allocator

./: CMakeLists.txt
doc/: dane.ods  sprawozdanie.odt
resources/: english.dic  polish.dic
src/: CMakeLists.txt  effective_allocator.h  logger.h  test.cpp
